--- a/models/staging/stg_orders.yml
+++ b/models/staging/stg_orders.yml
@@ -7,3 +7,8 @@ models:
         tests:
           - not_null
           - unique
+    tests:
+      - dbt_utils.unique_combination_of_columns:
+          combination_of_columns:
+            - customer_id
+            - order_date
